opam-version: "1.2"
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
authors: ["Anil Madhavapeddy" "Thomas Gazagnaire" "David Sheets"
          "Rudi Grinberg" "Timothy Bourke"]
homepage: "https://github.com/mirage/ocaml-cow"
doc: "http://mirage.github.io/ocaml-cow/"
license: "ISC"
dev-repo: "https://github.com/mirage/ocaml-cow.git"
bug-reports: "https://github.com/mirage/ocaml-cow/issues"
tags: ["org:mirage" "org:xapi-project" "www" "html" "xml"
       "css" "json" "markdown" ]

available: [ ocaml-version >= "4.02.3"]
depends: [
  "dune" {build & >= "1.1.0"}
  "uri" {>= "1.3.9"}
  "xmlm" {>= "1.1.1"}
  "omd" {>= "0.8.2"}
  "ezjsonm" {>= "0.4.0"}
  "alcotest" {test}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
